# sp1-blob-inclusion

./: .gitignore
program/: Cargo.toml  oldlock
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
