[workspace]
[package]
version = "0.1.0"
name = "blobsp1-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
celestia-rpc = {path = "../../upstream-lumina/rpc"}
celestia-types = {path = "../../upstream-lumina/types"}
serde_json = "1.0.114"
bincode = "1.3.3"
nmt-rs = {path = "../../nmt-rs", features=["serde"]}
#nmt-rs = {git = "https://github.com/Sovereign-Labs/nmt-rs.git"}