[workspace]
[package]
version = "0.1.0"
name = "blobsp1-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }
celestia-rpc = {git="https://github.com/eigerco/lumina.git", rev="8094d04"}
celestia-types = {git="https://github.com/eigerco/lumina.git", rev="8094d04"}
serde_json = "1.0.114"
bincode = "1.3.3"
nmt-rs = {git="https://github.com/Sovereign-Labs/nmt-rs.git", rev="ac03d7c", features=["serde"]}

[patch.crates-io]
nmt-rs = {git="https://github.com/Sovereign-Labs/nmt-rs.git", rev="ac03d7c", features=["serde"]}